--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
             <div class="row">
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-laptop-code text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-laptop-code text-primary mr-4"></i> -->
+                        <img src="img/icono1.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en riesgos de vida</h4>
                             <p>Te ayudamos a encontrar la protección en Gastos Médicos Mayores que puedas pagar con el alcance que tú necesitas.</p>
@@ -162,7 +163,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-code text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-code text-primary mr-4"></i> -->
+                        <img src="img/icono2.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en planes para retiro</h4>
                             <p>Te ayudamos a crear una pensión dentro del marco de la ley de manera segura.</p>
@@ -171,7 +173,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i> -->
+                        <img src="img/icono3.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Orientación en salida de deuda de manera sana</h4>
                             <p>Nosotros te apoyamos a salir de forma ordenada para construir una solidez financiera.</p>
@@ -180,7 +183,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-chart-line text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-chart-line text-primary mr-4"></i> -->
+                        <img src="img/icono4.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3"> Asesoría en proyectos patrimoniales personales de alta seguridad personal, legal, económica y financiera</h4>
                             <p>Totalmente personalizados dentro de uno de los sistemas financiero legal más vigilado y seguro del planeta.</p>
@@ -189,7 +193,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-search text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-search text-primary mr-4"></i> -->
+                        <img src="img/icono5.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Servicios personalizados en hacer efectiva la póliza</h4>
                             <p>Atención y acompañamiento en siniestros.</p>
@@ -200,7 +205,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-pen text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-pen text-primary mr-4"></i> -->
+                        <img src="img/icono6.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en la obtención de Seguro de Gastos Médicos (Individual y de grupo)</h4>
                             <p>Revisión de formularios por nuestros asesores médicos y legales.</p>
@@ -631,9 +637,9 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
                 <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
-                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-primary mr-2"></i>info@example.com</p>
+                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Av. Ignacio L. Vallarta 3300-Piso 2, Interior Connectory Corp 9-11, Vallarta Nte., 44690 Guadalajara, Jal.</p>
+                <p><i class="fa fa-phone-alt text-primary mr-2"></i>3338087537</p>
+                <p><i class="fa fa-envelope text-primary mr-2"></i>omar@dinerorganico.com</p>
             </div>
         </div>
     </div>
