--- a/soluciones.html
+++ b/soluciones.html
@@ -194,9 +194,9 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
                 <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
-                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-primary mr-2"></i>info@example.com</p>
+                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Av. Ignacio L. Vallarta 3300-Piso 2, Interior Connectory Corp 9-11, Vallarta Nte., 44690 Guadalajara, Jal.</p>
+                <p><i class="fa fa-phone-alt text-primary mr-2"></i>3338087537</p>
+                <p><i class="fa fa-envelope text-primary mr-2"></i>omar@dinerorganico.com</p>
             </div>
         </div>
     </div>
