--- a/servicios.html
+++ b/servicios.html
@@ -29,23 +29,29 @@
     <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0" style="background-color: #131313;">
         <div class="container-lg p-0">
-            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="img-fluid" width="50%">
-                </a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="servicios.html" class="nav-item nav-link">Servicios</a>
-                        <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
-                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+            <div class="row">
+                <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <a href="index.html" class="navbar-brand">
+                            <img src="img/logo.png" alt="img-fluid" width="50%">
+                        </a>
                     </div>
-                </div>
-            </nav>
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                            <div class="navbar-nav ml-auto py-0">
+                                <a href="index.html" class="nav-item nav-link">Home</a>
+                                <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                                <a href="servicios.html" class="nav-item nav-link">Servicios</a>
+                                <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
+                                <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
     <!-- Navbar End -->
@@ -76,7 +82,8 @@
             <div class="row">
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-laptop-code text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-laptop-code text-primary mr-4"></i> -->
+                        <img src="img/icono1.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en riesgos de vida</h4>
                             <p>Te ayudamos a encontrar la protección en Gastos Médicos Mayores que puedas pagar con el alcance que tú necesitas.</p>
@@ -85,7 +92,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-code text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-code text-primary mr-4"></i> -->
+                        <img src="img/icono2.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en planes para retiro</h4>
                             <p>Te ayudamos a crear una pensión dentro del marco de la ley de manera segura.</p>
@@ -94,7 +102,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-envelope-open-text text-primary mr-4"></i> -->
+                        <img src="img/icono3.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Orientación en salida de deuda de manera sana</h4>
                             <p>Nosotros te apoyamos a salir de forma ordenada para construir una solidez financiera.</p>
@@ -103,7 +112,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-chart-line text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-chart-line text-primary mr-4"></i> -->
+                        <img src="img/icono4.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3"> Asesoría en proyectos patrimoniales personales de alta seguridad personal, legal, económica y financiera</h4>
                             <p>Totalmente personalizados dentro de uno de los sistemas financiero legal más vigilado y seguro del planeta.</p>
@@ -112,7 +122,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-search text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-search text-primary mr-4"></i> -->
+                        <img src="img/icono5.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Servicios personalizados en hacer efectiva la póliza</h4>
                             <p>Atención y acompañamiento en siniestros.</p>
@@ -123,7 +134,8 @@
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="d-flex">
-                        <i class="fa fa-3x fa-pen text-primary mr-4"></i>
+                        <!-- <i class="fa fa-3x fa-pen text-primary mr-4"></i> -->
+                        <img src="img/icono6.png" alt="" width="20%" height="20%">
                         <div class="d-flex flex-column">
                             <h4 class="font-weight-bold mb-3">Asesoría en la obtención de Seguro de Gastos Médicos (Individual y de grupo)</h4>
                             <p>Revisión de formularios por nuestros asesores médicos y legales.</p>
@@ -210,9 +222,8 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="img-fluid" width="50%">
+                    <img src="img/logo.png" alt="img-fluid" width="75%">
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -242,7 +253,6 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
-                <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Av. Ignacio L. Vallarta 3300-Piso 2, Interior Connectory Corp 9-11, Vallarta Nte., 44690 Guadalajara, Jal.</p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>3338087537</p>
                 <p><i class="fa fa-envelope text-primary mr-2"></i>omar@dinerorganico.com</p>
@@ -250,10 +260,12 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5">
+        <!--
         <p class="m-0 text-center">
             &copy; <a class="font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by
             <a class="font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
         </p>
+        -->
     </div>
     <!-- Footer End -->
 
