--- a/soluciones.html
+++ b/soluciones.html
@@ -28,23 +28,29 @@
     <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0" style="background-color: #131313;">
         <div class="container-lg p-0">
-            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="img-fluid" width="50%">
-                </a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="servicios.html" class="nav-item nav-link">Servicios</a>
-                        <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
-                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+            <div class="row">
+                <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <a href="index.html" class="navbar-brand">
+                            <img src="img/logo.png" alt="img-fluid" width="50%">
+                        </a>
                     </div>
-                </div>
-            </nav>
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                            <div class="navbar-nav ml-auto py-0">
+                                <a href="index.html" class="nav-item nav-link">Home</a>
+                                <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                                <a href="servicios.html" class="nav-item nav-link">Servicios</a>
+                                <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
+                                <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
     <!-- Navbar End -->
@@ -67,12 +73,12 @@
                 <div class="col-12 col-lg-6 text-center mb-5">
                     <small class="d-inline bg-primary text-white text-uppercase font-weight-bold px-1">Soluciones</small>
                     <h1 class="mt-2 mb-3">Soluciones</h1>
-                    <h4 class="font-weight-normal text-muted mb-4 px-0">Dinero Orgánico te ofrece soluciones reales a problemas frecuentes de sistemas burócratas, complejos y lentos.</h4>
+                    <h4 class="font-weight-normal text-muted mb-4">Dinero Orgánico te ofrece soluciones reales a problemas frecuentes de sistemas burócratas, complejos y lentos.</h4>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8 mb-5">
-                    <img src="img/12_Preguntas_Entrevista_640x400.png" alt="">
+                <div class="col-md-8 col-sm-12 col-xs-12 mb-5">
+                    <img src="img/12.jpg" alt="img-fluid">
                     <!--
                     <div class="d-flex flex-column align-items-center justify-content-center bg-primary p-4">
                         <h3>Basic</h3>
@@ -129,8 +135,6 @@
                                 Concretar indemnización de la aseguradora.
                             </h5>
                         </div>
-                           
-                        
                     </div>
                     <!--
                         <div class="d-flex flex-column align-items-center justify-content-center bg-primary p-4">
@@ -161,9 +165,8 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="img-fluid" width="50%">
+                    <img src="img/logo.png" alt="img-fluid" width="75%">
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -193,7 +196,6 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
-                <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Av. Ignacio L. Vallarta 3300-Piso 2, Interior Connectory Corp 9-11, Vallarta Nte., 44690 Guadalajara, Jal.</p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>3338087537</p>
                 <p><i class="fa fa-envelope text-primary mr-2"></i>omar@dinerorganico.com</p>
@@ -201,10 +203,12 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5">
+        <!--
         <p class="m-0 text-center">
             &copy; <a class="font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by
             <a class="font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
         </p>
+        -->
     </div>
     <!-- Footer End -->
 
