--- a/nosotros.html
+++ b/nosotros.html
@@ -29,23 +29,29 @@
     <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0" style="background-color: #131313;">
         <div class="container-lg p-0">
-            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="img-fluid" width="50%">
-                </a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="servicios.html" class="nav-item nav-link">Servicios</a>
-                        <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
-                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+            <div class="row">
+                <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <a href="index.html" class="navbar-brand">
+                            <img src="img/logo.png" alt="img-fluid" width="50%">
+                        </a>
                     </div>
-                </div>
-            </nav>
+                    <div class="col-md-6 col-sm-12 text-center">
+                        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                            <div class="navbar-nav ml-auto py-0">
+                                <a href="index.html" class="nav-item nav-link">Home</a>
+                                <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                                <a href="servicios.html" class="nav-item nav-link">Servicios</a>
+                                <a href="soluciones.html" class="nav-item nav-link">Soluciones</a>
+                                <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
     <!-- Navbar End -->
@@ -79,7 +85,7 @@
             <div class="row mt-4">
                 <div class="col-md-4">
                     <div class="d-flex align-items-center border mb-4 mb-lg-0 p-4" style="height: 120px;">
-                        <i class="fa fa-2x fa-map-marker-alt text-primary mr-3"></i>
+                        <img src="img/location0.png" class="img-fluid w-25 px-2" alt="">
                         <div class="d-flex flex-column">
                             <h5 class="font-weight-bold">Ubicación</h5>
                             <p class="m-0">123 Street, New York, USA</p>
@@ -88,7 +94,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex align-items-center border mb-4 mb-lg-0 p-4" style="height: 120px;">
-                        <i class="fa fa-2x fa-envelope-open text-primary mr-3"></i>
+                        <img src="img/email0.png" class="img-fluid w-25 px-2" alt="">
                         <div class="d-flex flex-column">
                             <h5 class="font-weight-bold">Email</h5>
                             <p class="m-0">info@example.com</p>
@@ -97,7 +103,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex align-items-center border mb-4 mb-lg-0 p-4" style="height: 120px;">
-                        <i class="fas fa-2x fa-phone-alt text-primary mr-3"></i>
+                        <img src="img/telephone-call0.png" class="img-fluid w-25 px-2" alt="">
                         <div class="d-flex flex-column">
                             <h5 class="font-weight-bold">Telefono</h5>
                             <p class="m-0">+012 345 6789</p>
@@ -132,7 +138,7 @@
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
                                 <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">20</h2>
-                                <h5 class="font-weight-bold mb-4">Years Expereince</h5>
+                                <h5 class="font-weight-bold mb-4">Años de Experiencia</h5>
                             </div>
                         </div>
                         <div class="col-sm-6 pb-1">
@@ -250,9 +256,8 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" alt="img-fluid" width="50%">
+                    <img src="img/logo.png" alt="img-fluid" width="75%">
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -282,7 +287,6 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="font-weight-bold text-primary mb-4">Ponte en contacto</h5>
-                <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
                 <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Av. Ignacio L. Vallarta 3300-Piso 2, Interior Connectory Corp 9-11, Vallarta Nte., 44690 Guadalajara, Jal.</p>
                 <p><i class="fa fa-phone-alt text-primary mr-2"></i>3338087537</p>
                 <p><i class="fa fa-envelope text-primary mr-2"></i>omar@dinerorganico.com</p>
@@ -290,10 +294,12 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5">
+        <!--
         <p class="m-0 text-center">
             &copy; <a class="font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by
             <a class="font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
         </p>
+        -->
     </div>
     <!-- Footer End -->
 
